--- a/html/optimization-patterns.html
+++ b/html/optimization-patterns.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Паттерны оптимизации &middot; Game Programming Patterns</title>
+<title>Низкоуровневая оптимизация &middot; Game Programming Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -25,7 +25,7 @@
 <body id="top">
 <div class="page sidebar">
 <div class="content">
-<h1>Паттерны оптимизации</h1>
+<h1>Низкоуровневая оптимизация</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a></h1>
 <p>While the rising tide of faster and faster hardware has lifted most software above worrying about performance, games are one of the few remaining exceptions. Players always want richer, more realistic and exciting experiences. Screens are crowded with games vying for a player&#8217;s attention&thinsp;&mdash;&thinsp;and cash!&thinsp;&mdash;&thinsp;and the game that pushes the hardware the farthest often wins.</p>
 <p>Optimizing for performance is a deep art that touches all aspects of software. Low-level coders master the myriad idiosyncracies of hardware architectures. Meanwhile, algorithms researchers compete to prove mathematically whose procedure is the most efficient.</p>
