--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Data Locality &middot; Паттерны оптимизации &middot; Game Programming Patterns</title>
+<title>Data Locality &middot; Низкоуровневая оптимизация &middot; Game Programming Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -26,7 +26,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Data Locality</h1>
-<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="паттерны-оптимизации.html">Паттерны оптимизации</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="низкоуровневая-оптимизация.html">Низкоуровневая оптимизация</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Speed memory access by arranging data to take advantage of CPU caching.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
@@ -635,7 +635,7 @@ doubles down on the component pattern.</p>
 </li>
 </ul>
 <nav>
-  <span class="prev">&larr; <a href="паттерны-оптимизации.html">Предыдущая глава</a></span>
+  <span class="prev">&larr; <a href="низкоуровневая-оптимизация.html">Предыдущая глава</a></span>
   <span class="next"><a href="dirty-flag.html">Next Chapter</a> &rarr;</span>
   <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
 </nav>
