--- a/html/spatial-partition.html
+++ b/html/spatial-partition.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Spatial Partition &middot; Паттерны оптимизации &middot; Game Programming Patterns</title>
+<title>Spatial Partition &middot; Низкоуровневая оптимизация &middot; Game Programming Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -26,7 +26,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Spatial Partition</h1>
-<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="паттерны-оптимизации.html">Паттерны оптимизации</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="низкоуровневая-оптимизация.html">Низкоуровневая оптимизация</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Efficiently locate nearby objects by storing them in a data structure organized by their positions.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
